# eg

./: .gitignore  .gitmodules  README.md
Bash/: INP  molgrep  pdb2pqr  vennpaste  vmd
Bash/examples/: ConvergenceGaq.sh  Format.sh  InFormat.sh
Bash/libmsd/: MSDabs.txt  MSDaqions.txt  MSDcations.txt  MSDions.txt  MSDnonaqneutrals.txt  MSDsort.txt
BashPresentation/: Bash.md  BashPresentation  mp2.out
C/callcpp/: main.py  read.h
C/sharedlib/: test
UnixUtils/PresentationExamples/: OUT  Qsub  SCFE  inp.awk  molecule_coords.awk  solvE  sort.awk  test.sh  test.txt  tink2vmd  xyzpdb
UnixUtils/awk/: basic.awk  mp2.in  oneliners.sh
UnixUtils/bash/: basic.sh
UnixUtils/regex/: basic
UnixUtils/sed/: basic.sh
chapel/hello/: Makefile  hello  hellomodule  hellomodule.chpl
chapel/montecarlo/: Makefile  a.out  montecarlo  montecarlo.chpl
chapel/race/: Makefile  race  race.chpl
chapel/snippets/: Makefile  domains  domains.chpl
cmake/: CMakeCache.txt  CMakeLists.txt  tutorial.cxx
cmake/MathFunctions/: mysqrt.cxx
cp2k/: README.md
cp2k/aimd/: WATER-1.ener  WATER-1.restart  WATER-1.restart.bak-1  WATER-1.restart.bak-2  WATER-1.restart.bak-3  water.inp  water.o2713794  water.o2713847  (+3 more)
ffi/: README.md
gnuplot/: example.ps  gnuplot.plt
hpc/: sample.pbs
javascript/: helloworld.html
julia/: helloworld.jl
mopac/: CO.arc  CO.aux  CO.mop  CO.out  keywords
python/: libs
qchem/: .pcm.in.22563.qcin.1  .plt-mos.in.45767.qcin.1  .plt-spin.in.46027.qcin.1  .plt.qcm.92339.qcin.1  hf.in  omegab97x-d.in  plt-mos.in  plt-spin.out  plt.out  plt.qcm  read.in
(+688 files in other folders)
